@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,19 +24,18 @@
 /*
  * @test
  * @enablePreview
- * @modules java.base/jdk.internal.ref java.base/jdk.internal.foreign
+ * @modules java.base/jdk.internal.foreign
  * @run testng/othervm TestMemorySession
  */
 
 import java.lang.foreign.Arena;
-
-import java.lang.foreign.SegmentScope;
 
 import jdk.internal.foreign.MemorySessionImpl;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import static org.testng.Assert.*;
 
+import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -51,10 +50,10 @@ public class TestMemorySession {
     @Test
     public void testConfined() {
         AtomicInteger acc = new AtomicInteger();
-        Arena arena = Arena.openConfined();
+        Arena arena = Arena.ofConfined();
         for (int i = 0 ; i < N_THREADS ; i++) {
             int delta = i;
-            addCloseAction(arena.scope(), () -> acc.addAndGet(delta));
+            addCloseAction(arena, () -> acc.addAndGet(delta));
         }
         assertEquals(acc.get(), 0);
 
@@ -63,17 +62,17 @@ public class TestMemorySession {
     }
 
     @Test(dataProvider = "sharedSessions")
-    public void testSharedSingleThread(SessionSupplier sessionSupplier) {
+    public void testSharedSingleThread(ArenaSupplier arenaSupplier) {
         AtomicInteger acc = new AtomicInteger();
-        SegmentScope session = sessionSupplier.get();
+        Arena session = arenaSupplier.get();
         for (int i = 0 ; i < N_THREADS ; i++) {
             int delta = i;
             addCloseAction(session, () -> acc.addAndGet(delta));
         }
         assertEquals(acc.get(), 0);
 
-        if (!SessionSupplier.isImplicit(session)) {
-            SessionSupplier.close(session);
+        if (!TestMemorySession.ArenaSupplier.isImplicit(session)) {
+            TestMemorySession.ArenaSupplier.close(session);
             assertEquals(acc.get(), IntStream.range(0, N_THREADS).sum());
         } else {
             session = null;
@@ -85,11 +84,11 @@ public class TestMemorySession {
     }
 
     @Test(dataProvider = "sharedSessions")
-    public void testSharedMultiThread(SessionSupplier sessionSupplier) {
+    public void testSharedMultiThread(ArenaSupplier arenaSupplier) {
         AtomicInteger acc = new AtomicInteger();
         List<Thread> threads = new ArrayList<>();
-        SegmentScope session = sessionSupplier.get();
-        AtomicReference<SegmentScope> sessionRef = new AtomicReference<>(session);
+        Arena session = arenaSupplier.get();
+        AtomicReference<Arena> sessionRef = new AtomicReference<>(session);
         for (int i = 0 ; i < N_THREADS ; i++) {
             int delta = i;
             Thread thread = new Thread(() -> {
@@ -109,10 +108,10 @@ public class TestMemorySession {
 
         // if no cleaner, close - not all segments might have been added to the session!
         // if cleaner, don't unset the session - after all, the session is kept alive by threads
-        if (!SessionSupplier.isImplicit(session)) {
+        if (!TestMemorySession.ArenaSupplier.isImplicit(session)) {
             while (true) {
                 try {
-                    SessionSupplier.close(session);
+                    TestMemorySession.ArenaSupplier.close(session);
                     break;
                 } catch (IllegalStateException ise) {
                     // session is acquired (by add) - wait some more
@@ -128,7 +127,7 @@ public class TestMemorySession {
             }
         });
 
-        if (!SessionSupplier.isImplicit(session)) {
+        if (!TestMemorySession.ArenaSupplier.isImplicit(session)) {
             assertEquals(acc.get(), IntStream.range(0, N_THREADS).sum());
         } else {
             session = null;
@@ -142,11 +141,11 @@ public class TestMemorySession {
 
     @Test
     public void testLockSingleThread() {
-        Arena arena = Arena.openConfined();
+        Arena arena = Arena.ofConfined();
         List<Arena> handles = new ArrayList<>();
         for (int i = 0 ; i < N_THREADS ; i++) {
-            Arena handle = Arena.openConfined();
-            keepAlive(handle.scope(), arena.scope());
+            Arena handle = Arena.ofConfined();
+            keepAlive(handle, arena);
             handles.add(handle);
         }
 
@@ -165,12 +164,12 @@ public class TestMemorySession {
 
     @Test
     public void testLockSharedMultiThread() {
-        Arena arena = Arena.openShared();
+        Arena arena = Arena.ofShared();
         AtomicInteger lockCount = new AtomicInteger();
         for (int i = 0 ; i < N_THREADS ; i++) {
             new Thread(() -> {
-                try (Arena handle = Arena.openConfined()) {
-                    keepAlive(handle.scope(), arena.scope());
+                try (Arena handle = Arena.ofConfined()) {
+                    keepAlive(handle, arena);
                     lockCount.incrementAndGet();
                     waitSomeTime();
                     lockCount.decrementAndGet();
@@ -193,19 +192,19 @@ public class TestMemorySession {
 
     @Test
     public void testCloseEmptyConfinedSession() {
-        Arena.openConfined().close();
+        Arena.ofConfined().close();
     }
 
     @Test
     public void testCloseEmptySharedSession() {
-        Arena.openShared().close();
+        Arena.ofShared().close();
     }
 
     @Test
     public void testCloseConfinedLock() {
-        Arena arena = Arena.openConfined();
-        Arena handle = Arena.openConfined();
-        keepAlive(handle.scope(), arena.scope());
+        Arena arena = Arena.ofConfined();
+        Arena handle = Arena.ofConfined();
+        keepAlive(handle, arena);
         AtomicReference<Throwable> failure = new AtomicReference<>();
         Thread t = new Thread(() -> {
             try {
@@ -225,32 +224,32 @@ public class TestMemorySession {
     }
 
     @Test(dataProvider = "allSessions")
-    public void testSessionAcquires(SessionSupplier sessionSupplier) {
-        SegmentScope session = sessionSupplier.get();
+    public void testSessionAcquires(ArenaSupplier ArenaSupplier) {
+        Arena session = ArenaSupplier.get();
         acquireRecursive(session, 5);
-        if (!SessionSupplier.isImplicit(session))
-            SessionSupplier.close(session);
+        if (!TestMemorySession.ArenaSupplier.isImplicit(session))
+            TestMemorySession.ArenaSupplier.close(session);
     }
 
-    private void acquireRecursive(SegmentScope session, int acquireCount) {
-        try (Arena arena = Arena.openConfined()) {
-            keepAlive(arena.scope(), session);
+    private void acquireRecursive(Arena session, int acquireCount) {
+        try (Arena arena = Arena.ofConfined()) {
+            keepAlive(arena, session);
             if (acquireCount > 0) {
                 // recursive acquire
                 acquireRecursive(session, acquireCount - 1);
             }
-            if (!SessionSupplier.isImplicit(session)) {
-                assertThrows(IllegalStateException.class, () -> SessionSupplier.close(session));
+            if (!ArenaSupplier.isImplicit(session)) {
+                assertThrows(IllegalStateException.class, () -> ArenaSupplier.close(session));
             }
         }
     }
 
     @Test
     public void testConfinedSessionWithImplicitDependency() {
-        Arena root = Arena.openConfined();
+        Arena root = Arena.ofConfined();
         // Create many implicit sessions which depend on 'root', and let them become unreachable.
         for (int i = 0; i < N_THREADS; i++) {
-            keepAlive(SegmentScope.auto(), root.scope());
+            keepAlive(Arena.ofAuto(), root);
         }
         // Now let's keep trying to close 'root' until we succeed. This is trickier than it seems: cleanup action
         // might be called from another thread (the Cleaner thread), so that the confined session lock count is updated racily.
@@ -262,8 +261,8 @@ public class TestMemorySession {
             } catch (IllegalStateException ex) {
                 kickGC();
                 for (int i = 0 ; i < N_THREADS ; i++) {  // add more races from current thread
-                    try (Arena arena = Arena.openConfined()) {
-                        keepAlive(arena.scope(), root.scope());
+                    try (Arena arena = Arena.ofConfined()) {
+                        keepAlive(arena, root);
                         // dummy
                     }
                 }
@@ -274,19 +273,19 @@ public class TestMemorySession {
 
     @Test
     public void testConfinedSessionWithSharedDependency() {
-        Arena root = Arena.openConfined();
+        Arena root = Arena.ofConfined();
         List<Thread> threads = new ArrayList<>();
         // Create many implicit sessions which depend on 'root', and let them become unreachable.
         for (int i = 0; i < N_THREADS; i++) {
-            Arena arena = Arena.openShared(); // create session inside same thread!
-            keepAlive(arena.scope(), root.scope());
+            Arena arena = Arena.ofShared(); // create session inside same thread!
+            keepAlive(arena, root);
             Thread t = new Thread(arena::close); // close from another thread!
             threads.add(t);
             t.start();
         }
         for (int i = 0 ; i < N_THREADS ; i++) { // add more races from current thread
-            try (Arena arena = Arena.openConfined()) {
-                keepAlive(arena.scope(), root.scope());
+            try (Arena arena = Arena.ofConfined()) {
+                keepAlive(arena, root);
                 // dummy
             }
         }
@@ -300,6 +299,25 @@ public class TestMemorySession {
         // Now let's close 'root'. This is trickier than it seems: releases of the confined session happen in different
         // threads, so that the confined session lock count is updated racily. If that happens, the following close will blow up.
         root.close();
+    }
+
+    @Test(dataProvider = "nonCloseableSessions")
+    public void testNonCloseableSessions(ArenaSupplier arenaSupplier) {
+        var arena = arenaSupplier.get();
+        var sessionImpl = ((MemorySessionImpl) arena.scope());
+        assertFalse(sessionImpl.isCloseable());
+        assertThrows(UnsupportedOperationException.class, () ->
+                sessionImpl.close());
+    }
+
+    @Test(dataProvider = "allSessionsAndGlobal")
+    public void testIsCloseableBy(ArenaSupplier arenaSupplier) {
+        var arena = arenaSupplier.get();
+        var sessionImpl = ((MemorySessionImpl) arena.scope());
+        assertEquals(sessionImpl.isCloseableBy(Thread.currentThread()), sessionImpl.isCloseable());
+        Thread otherThread = new Thread();
+        boolean isCloseableByOther = sessionImpl.isCloseable() && !"ConfinedSession".equals(sessionImpl.getClass().getSimpleName());
+        assertEquals(sessionImpl.isCloseableBy(otherThread), isCloseableByOther);
     }
 
     private void waitSomeTime() {
@@ -321,55 +339,78 @@ public class TestMemorySession {
     @DataProvider
     static Object[][] drops() {
         return new Object[][] {
-                { (Supplier<Arena>) Arena::openConfined},
-                { (Supplier<Arena>) Arena::openShared},
+                { (Supplier<Arena>) Arena::ofConfined},
+                { (Supplier<Arena>) Arena::ofShared},
         };
     }
 
-    private void keepAlive(SegmentScope child, SegmentScope parent) {
-        MemorySessionImpl parentImpl = (MemorySessionImpl) parent;
+    private void keepAlive(Arena child, Arena parent) {
+        MemorySessionImpl parentImpl = MemorySessionImpl.toMemorySession(parent);
         parentImpl.acquire0();
         addCloseAction(child, parentImpl::release0);
     }
 
-    private void addCloseAction(SegmentScope session, Runnable action) {
-        MemorySessionImpl sessionImpl = (MemorySessionImpl) session;
+    private void addCloseAction(Arena session, Runnable action) {
+        MemorySessionImpl sessionImpl = MemorySessionImpl.toMemorySession(session);
         sessionImpl.addCloseAction(action);
     }
 
-    interface SessionSupplier extends Supplier<SegmentScope> {
+    interface ArenaSupplier extends Supplier<Arena> {
 
-        static void close(SegmentScope session) {
-            ((MemorySessionImpl)session).close();
+        static void close(Arena arena) {
+            MemorySessionImpl.toMemorySession(arena).close();
         }
 
-        static boolean isImplicit(SegmentScope session) {
-            return !((MemorySessionImpl)session).isCloseable();
+        static boolean isImplicit(Arena arena) {
+            return !MemorySessionImpl.toMemorySession(arena).isCloseable();
         }
 
-        static SessionSupplier ofImplicit() {
-            return SegmentScope::auto;
+        static ArenaSupplier ofAuto() {
+            return Arena::ofAuto;
         }
 
-        static SessionSupplier ofArena(Supplier<Arena> arenaSupplier) {
-            return () -> arenaSupplier.get().scope();
+        static ArenaSupplier ofGlobal() {
+            return Arena::global;
+        }
+
+        static ArenaSupplier ofArena(Supplier<Arena> arenaSupplier) {
+            return arenaSupplier::get;
         }
     }
 
     @DataProvider(name = "sharedSessions")
     static Object[][] sharedSessions() {
         return new Object[][] {
-                { SessionSupplier.ofArena(Arena::openShared) },
-                { SessionSupplier.ofImplicit() },
+                { ArenaSupplier.ofArena(Arena::ofShared) },
+                { ArenaSupplier.ofAuto() },
         };
     }
 
     @DataProvider(name = "allSessions")
     static Object[][] allSessions() {
         return new Object[][] {
-                { SessionSupplier.ofArena(Arena::openConfined) },
-                { SessionSupplier.ofArena(Arena::openShared) },
-                { SessionSupplier.ofImplicit() },
+                { ArenaSupplier.ofArena(Arena::ofConfined) },
+                { ArenaSupplier.ofArena(Arena::ofShared) },
+                { ArenaSupplier.ofAuto() },
         };
     }
+
+    @DataProvider(name = "nonCloseableSessions")
+    static Object[][] nonCloseableSessions() {
+        return new Object[][] {
+                { ArenaSupplier.ofGlobal() },
+                { ArenaSupplier.ofAuto() }
+        };
+    }
+
+    @DataProvider(name = "allSessionsAndGlobal")
+    static Object[][] allSessionsAndGlobal() {
+        return new Object[][] {
+                { ArenaSupplier.ofArena(Arena::ofConfined) },
+                { ArenaSupplier.ofArena(Arena::ofShared) },
+                { ArenaSupplier.ofAuto() },
+                { ArenaSupplier.ofGlobal() },
+        };
+    }
+
 }
